<resources>
    <string name="app_name">MyContacts</string>

    <string name="select_image_text">please select contact image</string>

    <string name="first_name">first name</string>
    <string name="last_name">last name</string>
    <string name="phone_number">phone number</string>
    <string name="birth_date">birth date</string>

    <string name="phone_number_empty_dialog">don\'t have any phone number</string>
    <string name="confirm">confirm</string>
    <string name="set_contact_birth_date_dialog">Set Contact Birth Date here</string>
    <string name="set_birth_date_dialog">set your birth date here</string>
</resources>
