<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:clickable="true">
    <androidx.cardview.widget.CardView
        android:layout_margin="8dp"
        app:cardCornerRadius="30dp"
        android:id="@+id/my_info_card_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/confirm_my_info_btn_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#E2E4F1">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/my_info_image_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:clickable="true"
                android:src="@drawable/avatar1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:backgroundTint="@color/light_gray"
                android:layout_margin="8dp"
                app:cardCornerRadius="32dp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/my_info_image_edit" >
                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <LinearLayout
                        android:padding="16dp"
                        android:orientation="vertical"
                        android:layout_gravity="center_horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <EditText
                            android:id="@+id/my_info_first_name_edit"
                            android:layout_gravity="center_horizontal"
                            android:gravity="center"
                            android:textSize="36sp"
                            android:hint="@string/first_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                        <EditText
                            android:id="@+id/my_info_last_name_edit"
                            android:layout_gravity="center_horizontal"
                            android:gravity="center"
                            android:textSize="36sp"
                            android:layout_marginTop="16dp"
                            android:hint="@string/last_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                        <EditText
                            android:id="@+id/my_info_phone_number_edit"
                            android:layout_gravity="center_horizontal"
                            android:gravity="center"
                            android:textSize="36sp"
                            android:inputType="phone|number"
                            android:layout_marginTop="16dp"
                            android:hint="@string/phone_number"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:id="@+id/my_info_birth_date_edit"
                            android:layout_gravity="center_horizontal"
                            android:gravity="center"
                            android:textSize="36sp"
                            android:layout_marginTop="16dp"
                            android:text="@string/birth_date"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                        <Button
                            android:id="@+id/date_picker_my_info"
                            android:layout_marginTop="16dp"
                            android:textAllCaps="false"
                            android:text="@string/set_birth_date_dialog"
                            android:textColor="@color/colorPrimary"
                            android:layout_gravity="center"
                            android:backgroundTint="@color/colorAccent2"
                            android:gravity="center"
                            android:padding="16dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="40dp"
                            android:background="@drawable/round_ripple"/>
                    </LinearLayout>
                </ScrollView>

            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/confirm_my_info_btn_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_ripple"
        android:padding="8dp"
        android:text="@string/confirm"
        android:textColor="@color/green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>